# OTUS-Python-Basic-master

./: README.md  requirements.txt
additional hw/: oop.py
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_04/: README.md  jsonplaceholder_requests.py  main.py  models.py  postgres.env
homework_05/: app.py
homework_05/templates/: about.html  add_prod.html  base.html  details.html  index.html  list.html
homework_05/templates/products/: list.html
homework_05/views/: __init__.py  products.py
